# EdgeDevX.Examples

./: .gitmodules  .gitmodules.bak  .stats_timestamp  README.md
async_example/: CMakeLists.txt  README.md  main.c  main.h
avnet_end_to_end/: CMakeLists.txt  RemoteX.cmake  logger.h  main.c  main.h
avnet_end_to_end/HardwareDefinitions/avnet_mt3620_sk/: azure_sphere_remotex.json  azure_sphere_remotex_with_pwm.json  co2_monitor.json  pwm_example.json
avnet_end_to_end/HardwareDefinitions/avnet_mt3620_sk/inc/hw/: azure_sphere_remotex.h  azure_sphere_remotex_with_pwm.h  co2_monitor.h  pwm_example.h
avnet_end_to_end/HardwareDefinitions/avnet_mt3620_sk_rev2/: azure_sphere_remotex.json  co2_monitor.json  pwm_example.json  sample_appliance.json
avnet_end_to_end/HardwareDefinitions/avnet_mt3620_sk_rev2/inc/hw/: azure_sphere_remotex.h  co2_monitor.h  pwm_example.h
avnet_end_to_end/HardwareDefinitions/mt3620_rdb/: azure_sphere_remotex.json  pwm_example.json
avnet_end_to_end/HardwareDefinitions/mt3620_rdb/inc/hw/: azure_sphere_remotex.h  pwm_example.h
avnet_end_to_end/HardwareDefinitions/seeed_mt3620_mdb/: azure_sphere_learning_path.json  azure_sphere_remotex.json  pwm_example.json  sample_appliance.json
avnet_end_to_end/HardwareDefinitions/seeed_mt3620_mdb/inc/hw/: azure_sphere_learning_path.h  azure_sphere_remotex.h  pwm_example.h  sample_appliance.h
avnet_end_to_end_ext/: .gitignore  CMakeLists.txt  README.md  logger.c  main.c  main.h  sensor.c  sensor.h
device_twins/: CMakeLists.txt  main.c  main.h
direct_methods/: main.c  main.h
environment_logger/: CMakeLists.txt  README.md  co2_sensor.c  co2_sensor.h  logger.c  logger.h  main.c  main.demo2.c
gpio_on_linux/: CMakeLists.txt  README.md  main.c
hello_world/: .gitignore  CMakeLists.txt  README.md  main.c
openai_functions/: function.json  main.c
retro_click_driver/: CMakeLists.txt  RemoteX.cmake  main.c
simple_publish/: CMakeLists.txt  main.c  main.h
